--- a/index.html
+++ b/index.html
@@ -6,51 +6,65 @@
     <title>Coming Soon</title>
     <style>
         body, html {
-            height: 100%;
             margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f8f8f8;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            text-align: center;
+            padding: 50px 20px;
+        }
+        .header {
+            margin-bottom: 20px;
+        }
+        .header h1 {
+            font-size: 2.5em;
+            margin: 0;
+        }
+        .header p {
+            font-size: 1.2em;
+            margin: 10px 0 0;
         }
         .section {
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid #ddd;
+            margin: 40px 0;
         }
-        img {
+        .section img {
             max-width: 100%;
             height: auto;
+        }
+        .footer {
+            margin-top: 50px;
+            font-size: 0.9em;
+            color: #666;
         }
     </style>
 </head>
 <body>
-    <div class="section">
-        <img src="images/1.png" alt="Section 1">
+    <div class="container">
+        <div class="header">
+            <h1>Coming Soon</h1>
+            <p>Customize Your Trip with the Power of AI</p>
+        </div>
+        <div class="section">
+            <img src="images/1.png" alt="Feature 1">
+        </div>
+        <div class="section">
+            <img src="images/2.png" alt="Feature 2">
+        </div>
+        <div class="section">
+            <img src="images/3.png" alt="Feature 3">
+        </div>
+        <div class="section">
+            <img src="images/4.png" alt="Feature 4">
+        </div>
+        <div class="section">
+            <img src="images/5.png" alt="Feature 5">
+        </div>
+        <div class="footer">
+            <p>&copy; 2024 Ziara. All rights reserved.</p>
+        </div>
     </div>
-    <div class="section">
-        <img src="images/2.png" alt="Section 2">
-    </div>
-    <div class="section">
-        <img src="images/3.png" alt="Section 3">
-    </div>
-    <div class="section">
-        <img src="images/4.png" alt="Section 4">
-    </div>
-    <div class="section">
-        <img src="images/5.png" alt="Section 5">
-    </div>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Page</title>
-</head>
-<body>
-    <h1>Test Page</h1>
-    <p>If you see this, GitHub Pages is working correctly.</p>
 </body>
 </html>
