Update footer with LinkedIn and Contact Us

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
+    <title>Ziara</title>
     <style>
         body, html {
             margin: 0;
@@ -16,17 +16,6 @@
             text-align: center;
             padding: 50px 20px;
         }
-        .header {
-            margin-bottom: 20px;
-        }
-        .header h1 {
-            font-size: 2.5em;
-            margin: 0;
-        }
-        .header p {
-            font-size: 1.2em;
-            margin: 10px 0 0;
-        }
         .section {
             margin: 40px 0;
         }
@@ -38,15 +27,26 @@
             margin-top: 50px;
             font-size: 0.9em;
             color: #666;
+            background-color: #f4f4f4;
+            padding: 20px 0;
+        }
+        .footer img {
+            width: 100px;
+            height: auto;
+            margin-bottom: 20px;
+        }
+        .footer a {
+            text-decoration: none;
+            color: #666;
+            margin: 0 10px;
+        }
+        .footer p {
+            margin: 10px 0;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <h1>Coming Soon</h1>
-            <p>Customize Your Trip with the Power of AI</p>
-        </div>
         <div class="section">
             <img src="images/1.png" alt="Feature 1">
         </div>
@@ -63,7 +63,9 @@
             <img src="images/5.png" alt="Feature 5">
         </div>
         <div class="footer">
-            <p>&copy; 2024 Ziara. All rights reserved.</p>
+            <img src="images/logo.png" alt="Ziara Logo">
+            <p><a href="https://linkedin.com/company/ziarah" target="_blank">LinkedIn</a></p>
+            <p>Contact us: <a href="mailto:info@ziarah.io">info@ziarah.io</a></p>
         </div>
     </div>
 </body>
