--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
+            background-color: #FCF3E9;
             color: #333;
         }
         .container {
@@ -25,13 +25,16 @@
         }
         .footer {
             margin-top: 50px;
-            font-size: 0.9em;
+            font-size: 1em;
             color: #666;
-            background-color: #f4f4f4;
+            background-color: #FCF3E9;
             padding: 20px 0;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
         }
         .footer img {
-            width: 100px;
+            width: 150px;
             height: auto;
             margin-bottom: 20px;
         }
@@ -39,9 +42,11 @@
             text-decoration: none;
             color: #666;
             margin: 0 10px;
+            font-size: 1.2em;
         }
         .footer p {
             margin: 10px 0;
+            font-size: 1.2em;
         }
     </style>
 </head>
@@ -59,13 +64,15 @@
         <div class="section">
             <img src="images/4.png" alt="Feature 4">
         </div>
-        <div class="section">
-            <img src="images/5.png" alt="Feature 5">
-        </div>
         <div class="footer">
             <img src="images/logo.png" alt="Ziara Logo">
-            <p><a href="https://linkedin.com/company/ziarah" target="_blank">LinkedIn</a></p>
-            <p>Contact us: <a href="mailto:info@ziarah.io">info@ziarah.io</a></p>
+            <div>
+                <p><a href="https://linkedin.com/company/ziarah" target="_blank">LinkedIn</a></p>
+            </div>
+            <div>
+                <p>Contact us: <a href="mailto:info@ziarah.io">info@ziarah.io</a></p>
+            </div>
+            <p>&copy; 2024 Ziara. All rights reserved.</p>
         </div>
     </div>
 </body>
