--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
         }
         .container {
             text-align: center;
-            padding: 50px 20px;
         }
         .section {
-            margin: 40px 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
         }
         .section img {
-            max-width: 100%;
+            width: 100%;
             height: auto;
         }
         .footer {
@@ -32,6 +34,7 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
+            flex-wrap: wrap;
         }
         .footer img {
             width: 150px;
@@ -47,6 +50,9 @@
         .footer p {
             margin: 10px 0;
             font-size: 1.2em;
+        }
+        .footer .email {
+            font-size: 0.9em;
         }
     </style>
 </head>
@@ -66,13 +72,9 @@
         </div>
         <div class="footer">
             <img src="images/logo.png" alt="Ziara Logo">
-            <div>
-                <p><a href="https://linkedin.com/company/ziarah" target="_blank">LinkedIn</a></p>
-            </div>
-            <div>
-                <p>Contact us: <a href="mailto:info@ziarah.io">info@ziarah.io</a></p>
-            </div>
-            <p>&copy; 2024 Ziara. All rights reserved.</p>
+            <p><a href="https://linkedin.com/company/ziarah" target="_blank">LinkedIn</a></p>
+            <p class="email">Contact us: <a href="mailto:info@ziarah.io">info@ziarah.io</a></p>
+            <p style="width: 100%; text-align: center;">&copy; 2024 Ziara. All rights reserved.</p>
         </div>
     </div>
 </body>
