Update title and description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ziara</title>
+    <title>Ziarah</title>
+    <meta name="description" content="Your trip, your way">
     <style>
         body, html {
             margin: 0;
