--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
             font-size: 1.2em;
         }
         .footer .email {
-            font-size: 0.9em;
+            font-size: 1.2em;
+        }
+        .footer .contact {
+            font-size: 1.2em;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -74,8 +78,8 @@
         <div class="footer">
             <img src="images/logo.png" alt="Ziara Logo">
             <p><a href="https://linkedin.com/company/ziarah" target="_blank">LinkedIn</a></p>
-            <p class="email">Contact us: <a href="mailto:info@ziarah.io">info@ziarah.io</a></p>
-            <p style="width: 100%; text-align: center;">&copy; 2024 Ziara. All rights reserved.</p>
+            <p class="contact">Contact us: <span class="email"><a href="mailto:info@ziarah.io">info@ziarah.io</a></span></p>
+            <p style="width: 100%; text-align: center;">&copy; 2024 Ziarah. All rights reserved.</p>
         </div>
     </div>
 </body>
