Adjust font size and style for contact section

--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
             margin: 10px 0;
             font-size: 1.2em;
         }
-        .footer .email {
-            font-size: 1.2em;
-        }
         .footer .contact {
             font-size: 1.2em;
             font-weight: bold;
+        }
+        .footer .email {
+            font-size: 1.2em;
+            font-weight: normal;
         }
     </style>
 </head>
@@ -76,9 +77,9 @@
             <img src="images/4.png" alt="Feature 4">
         </div>
         <div class="footer">
-            <img src="images/logo.png" alt="Ziara Logo">
+            <img src="images/logo.png" alt="Ziarah Logo">
             <p><a href="https://linkedin.com/company/ziarah" target="_blank">LinkedIn</a></p>
-            <p class="contact">Contact us: <span class="email"><a href="mailto:info@ziarah.io">info@ziarah.io</a></span></p>
+            <p><span class="contact">Contact Us:</span> <span class="email"><a href="mailto:info@ziarah.io">info@ziarah.io</a></span></p>
             <p style="width: 100%; text-align: center;">&copy; 2024 Ziarah. All rights reserved.</p>
         </div>
     </div>
