--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             justify-content: space-around;
             align-items: center;
             flex-wrap: wrap;
+            text-align: center;
         }
         .footer img {
             width: 150px;
@@ -59,6 +60,27 @@
         .footer .email {
             font-size: 1em;
             font-weight: normal;
+        }
+        @media (max-width: 768px) {
+            .footer {
+                flex-direction: column;
+                align-items: center;
+            }
+            .footer img {
+                margin-bottom: 10px;
+            }
+            .footer p {
+                font-size: 1em;
+            }
+            .footer a {
+                font-size: 1em;
+            }
+            .footer .contact {
+                font-size: 1em;
+            }
+            .footer .email {
+                font-size: 0.9em;
+            }
         }
     </style>
 </head>
